# codebook

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  bun.lockb  codebook.toml  profile.json  spellbook-lsp  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: binaries.yml  ci.yml  release.yml  test.yml
assets/: codebook.pxd
codebook/: Cargo.toml
codebook-config/: Cargo.toml
codebook-config/src/: lib.rs  main.rs
codebook-lsp/: Cargo.toml
codebook-lsp/src/: code_dictionary.rs  file_cache.rs  lsp.rs  main.rs
codebook-zed/: Cargo.toml  extension.toml
codebook-zed/src/: lib.rs
codebook/src/: dictionary.rs  dictionary_repo.rs  downloader.rs  lib.rs  log.rs  main.rs  queries.rs  splitter.rs
codebook/tests/: test_css.rs  test_download.rs  test_files.rs  test_go.rs  test_python.rs  test_rust.rs  test_text.rs  test_toml.rs
codebook/tests/utils/: mod.rs
crates/codebook/: Cargo.toml  profile.json
crates/codebook-config/: Cargo.toml  spec.md
crates/codebook-config/src/: lib.rs  main.rs  settings.rs
crates/codebook-lsp/: Cargo.toml
crates/codebook-lsp/src/: file_cache.rs  lib.rs  lsp.rs  lsp_logger.rs  main.rs
crates/codebook/src/: dictionary.rs  dictionary_repo.rs  downloader.rs  lib.rs  log.rs  logging.rs  main.rs  parser.rs  queries.rs  regexes.rs  splitter.rs
crates/codebook/src/dictionaries/: combined.gen.txt  dictionary.rs  manager.rs  mod.rs  repo.rs  special.rs
crates/codebook/src/queries/: bash.scm  c.scm  css.scm  go.scm  haskell.scm  html.scm  java.scm  javascript.scm  php.scm  python.scm  r.scm  ruby.scm  rust.scm  toml.scm  typescript.scm
crates/codebook/tests/: test_c.rs  test_config.rs  test_css.rs  test_download.rs  test_files.rs  test_go.rs  test_haskell.rs  test_java.rs  test_javascript.rs  test_php.rs  test_python.rs  test_r.rs  test_regex.rs  test_ruby.rs  test_rust.rs  test_suggestions.rs  test_text.rs  test_toml.rs  test_typescript.rs
crates/codebook/tests/examples/: example.go  example.md  example.py  example.rs  example.ts
crates/codebook/tests/utils/: mod.rs
crates/dictionary-builder/: Cargo.toml  README.md
crates/dictionary-builder/src/: builder.rs  checksum.rs  error.rs  git.rs  lib.rs  main.rs  manifest.rs  processing.rs  source.rs  types.rs
crates/downloader/: Cargo.toml
crates/downloader/src/: lib.rs
dictionaries/en_us/: dictionary.toml
dictionaries/en_us/dict/: wordlist.txt
examples/: example.c  example.css  example.go  example.hs  example.html  example.java  example.js  example.jsx  example.md  example.php  example.py  example.r  example.rb  example.rs  example.sh  example.toml  example.ts  example.txt  it.md  spanish.md  sv.md  uk.md
integration_tests/: bun.lockb  client.ts  index.test.ts  index.ts  package.json  pyproject.toml  test_server.py  utils.ts
scripts/: generate_combined_wordlist.ts  get_wordlists.ts  release_lsp.ts
spellbook-lsp/: Cargo.toml
spellbook-lsp/src/: code_dictionary.rs  downloader.rs  lsp.rs  main.rs  queries.rs  splitter.rs
src/: main.rs  queries.rs
word_lists/: codebook.txt  combined.gen.txt  companies.txt  css.txt  elixir.txt  go.txt  html.txt  java.txt  js.txt  py.txt  rs.txt
wordlists/: common.txt  css.txt  go.txt  html.txt  java.txt  js.txt  py.txt  rs.txt
