[package]
name = "spellbook-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
regex = "1.11.1"
spellbook = "0.2.0"
tree-sitter = "<0.25.0"
tree-sitter-rust = "<0.25.0"
tree-sitter-python = "<0.25.0"
tree-sitter-javascript = "<0.25.0"
tree-sitter-html = "<0.25.0"
streaming-iterator = "0.1.9"
tower-lsp = "0.20.0"

[build-dependencies]
cc = "1.0"
