[workspace]
members = ["crates/codebook", "crates/codebook-config", "crates/codebook-lsp", "crates/downloader", "crates/dictionary-builder"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.26", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.6"
fs2 = "0.4"
git2 = "0.20.0"
glob = "0.3"
httpmock = "0.7.0"
lazy_static = "1.5.0"
log = "0.4.22"
lru = "0.13"
openssl = { version = "*", features = ["vendored"] }
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1", features = ["derive", "serde_derive"] }
serde_json = "1"
sha2 = "0.10.6"
spellbook = "0.3.0"
streaming-iterator = "0.1.9"
tempfile = "3"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower-lsp = "0.20.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tree-sitter = "<0.26.0"
tree-sitter-bash = "<0.24.0"
tree-sitter-c = "<0.25.0"
tree-sitter-css = "<0.25.0"
tree-sitter-go = "<0.25.0"
tree-sitter-html = "<0.25.0"
tree-sitter-javascript = "<0.25.0"
tree-sitter-php = "<0.24.0"
tree-sitter-python = "<0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "<0.25.0"
tree-sitter-toml-ng = "<0.8.0"
tree-sitter-typescript = "0.23.2"
unicode-segmentation = "1.12.0"
url = "2.4.0"
walkdir = "2.3.3"

codebook = { path = "crates/codebook" }
codebook_config = { path = "crates/codebook-config" }
downloader = { path = "crates/downloader" }
