[package]
name = "codebook-lsp"
version = "0.1.4"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
regex = "1.11.1"
spellbook = "0.2.0"
tree-sitter = "<0.25.0"
tree-sitter-rust = "<0.25.0"
tree-sitter-python = "<0.25.0"
tree-sitter-javascript = "<0.25.0"
tree-sitter-html = "<0.25.0"
tree-sitter-go = "<0.25.0"
streaming-iterator = "0.1.9"
tower-lsp = "0.20.0"
tree-sitter-typescript = "0.23.2"
ureq = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.6"
log = "0.4.22"
codebook = { path = "../codebook" }
clap = { version = "4.5.26", features = ["derive"] }


[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile = "3"
