[package]
name = "codebook_config"
version = "0.3.2"
edition = "2024"
description = "Configuration handling for the Codebook spell checker"
authors = ["Codebook Contributors"]
license = "MIT"
repository = "https://github.com/blopker/codebook"
homepage = "https://github.com/blopker/codebook"
documentation = "https://github.com/blopker/codebook"
readme = "../../README.md"
keywords = ["configuration", "spell-checker", "settings"]
categories = ["development-tools", "text-processing"]

[dependencies]
dirs.workspace = true
glob.workspace = true
log.workspace = true
regex.workspace = true
serde.workspace = true
toml.workspace = true


[dev-dependencies]
tempfile.workspace = true
