[package]
name = "codebook-lsp"
version = "0.2.7"
edition = "2024"

[dependencies]
streaming-iterator.workspace = true
tower-lsp.workspace = true
serde.workspace = true
serde_json.workspace = true
fs2.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
env_logger.workspace = true
log.workspace = true
clap.workspace = true
lru.workspace = true
openssl.workspace = true

codebook.workspace = true
codebook_config.workspace = true

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile.workspace = true
