[package]
name = "codebook-lsp"
version = "0.3.0"
edition = "2024"
description = "A code-aware spell checker with language server implementation, installable via cargo install"
authors = ["Codebook Contributors"]
license = "MIT"
repository = "https://github.com/blopker/codebook"
homepage = "https://github.com/blopker/codebook"
documentation = "https://github.com/blopker/codebook"
readme = "../../README.md"
keywords = ["spell-checker", "lsp", "language-server", "code", "spelling"]
categories = ["development-tools", "text-processing", "command-line-utilities"]
publish = true

# Ensure binary is installable with cargo install
[[bin]]
name = "codebook-lsp"
path = "src/main.rs"

[lib]
name = "codebook_lsp"
path = "src/lib.rs"

[dependencies]
clap.workspace = true
env_logger.workspace = true
fs2.workspace = true
log.workspace = true
lru.workspace = true
serde.workspace = true
serde_json.workspace = true
streaming-iterator.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
tower-lsp.workspace = true

codebook = { workspace = true }
codebook_config = { workspace = true }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile.workspace = true
