[package]
name = "codebook"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
regex = "1.11.1"
spellbook = { git = "https://github.com/helix-editor/spellbook.git#b6c31ea" }
tree-sitter = "<0.25.0"
tree-sitter-css = "<0.25.0"
tree-sitter-rust = "<0.25.0"
tree-sitter-python = "<0.25.0"
tree-sitter-javascript = "<0.25.0"
tree-sitter-html = "<0.25.0"
tree-sitter-go = "<0.25.0"
tree-sitter-toml-ng = "<0.8.0"
streaming-iterator = "0.1.9"
tower-lsp = "0.20.0"
tree-sitter-typescript = "0.23.2"
ureq = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.6"
log = "0.4.22"
lru = "0.12.5"

codebook_config = { path = "../codebook-config" }

[dev-dependencies]
tempfile = "3"
