[package]
name = "codebook"
version = "0.3.0"
edition = "2024"
description = "A code-aware spell checker library (dependency for codebook-lsp)"
authors = ["Codebook Contributors"]
license = "MIT"
repository = "https://github.com/blopker/codebook"
homepage = "https://github.com/blopker/codebook"
documentation = "https://github.com/blopker/codebook"
readme = "../../README.md"
keywords = ["code", "autocomplete", "language", "lsp"]
categories = ["development-tools", "text-processing"]
# This is primarily used as a dependency for codebook-lsp

# Binary for internal testing only
[[bin]]
name = "codebook"
path = "src/main.rs"

[dependencies]
lazy_static.workspace = true
regex.workspace = true
spellbook.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-c.workspace = true
tree-sitter-css.workspace = true
tree-sitter-go.workspace = true
tree-sitter-haskell.workspace = true
tree-sitter-html.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-php.workspace = true
tree-sitter-python.workspace = true
tree-sitter-r.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-toml-ng.workspace = true
tree-sitter.workspace = true
streaming-iterator.workspace = true
tower-lsp.workspace = true
tree-sitter-typescript.workspace = true
serde.workspace = true
serde_json.workspace = true
fs2.workspace = true
tokio.workspace = true
env_logger.workspace = true
log.workspace = true
lru.workspace = true
unicode-segmentation.workspace = true

codebook_config.workspace = true
codebook_downloader.workspace = true

[target.'cfg(not(target_os = "windows"))'.dependencies]
pprof.workspace = true


[dev-dependencies]
tempfile.workspace = true
