[package]
name = "dictionary-builder"
version = "0.1.0"
edition = "2024"
description = "A tool for building and managing spell-checking dictionaries"

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
clap = { version = "4.3.4", features = ["derive"] }
git2 = "0.20.0"
glob = "0.3.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
sha2 = "0.10.6"
thiserror = "2.0.12"
toml = "0.8.20"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = "2.4.0"
walkdir = "2.3.3"

[lib]
name = "dictionary_builder"
path = "src/lib.rs"

[[bin]]
name = "dictionary-builder"
path = "src/main.rs"
