[package]
name = "dictionary-builder"
version = "0.3.3"
edition = "2024"
description = "A tool for building and managing spell-checking dictionaries"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
git2.workspace = true
glob.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
walkdir.workspace = true

[lib]
name = "dictionary_builder"
path = "src/lib.rs"
