[package]
name = "downloader"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
httpmock = "0.7.0"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
env_logger.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
