[package]
name = "codebook_downloader"
version = "0.3.3"
edition = "2024"
description = "Dictionary downloading utility for the Codebook spell checker"
authors = ["Codebook Contributors"]
license = "MIT"
repository = "https://github.com/blopker/codebook"
homepage = "https://github.com/blopker/codebook"
documentation = "https://github.com/blopker/codebook"
readme = "../../README.md"
keywords = ["download", "dictionary", "spell-checker"]
categories = ["development-tools", "text-processing"]

[dev-dependencies]
httpmock = "0.7.0"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
env_logger.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
